<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.carematix.chatApplication.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:enabled="false"
        android:visible="false"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create"
        android:orderInCategory="101"
        android:title="@string/action_create"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="102"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom" />
</menu>